[gd_scene load_steps=10 format=2]

[ext_resource path="res://GFX/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Screne/Menu.gd" type="Script" id=2]
[ext_resource path="res://PLayer/Player_f.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/POL-battle-march-short.wav" type="AudioStream" id=4]
[ext_resource path="res://Screne/High_score.gd" type="Script" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.2
glow_blend_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="UI" type="Node2D" parent="."]
z_index = 1

[node name="Control" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="UI/Control"]
margin_top = 21.0
margin_right = 640.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.219608, 0.231373, 0.92549, 1 )
text = "Square shooter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Endless_button" type="Button" parent="UI/Control"]
margin_left = 120.0
margin_top = 140.0
margin_right = 270.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 3 )
text = "endless"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_button" type="Button" parent="UI/Control"]
margin_left = 120.0
margin_top = 210.0
margin_right = 270.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 3 )
text = "quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_button" type="Button" parent="UI/Control"]
margin_left = 367.937
margin_top = 140.0
margin_right = 517.937
margin_bottom = 201.0
custom_fonts/font = SubResource( 3 )
text = "Worlds"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_button" type="Button" parent="UI/Control"]
margin_left = 360.0
margin_top = 210.0
margin_right = 527.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="High_score" type="Label" parent="UI/Control"]
margin_top = 320.0
margin_right = 640.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 4 )
text = "100"
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="High_score_text" type="Label" parent="UI/Control"]
margin_top = 294.602
margin_right = 640.0
margin_bottom = 316.602
custom_fonts/font = SubResource( 4 )
text = "Highscore"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
autoplay = true
[connection signal="pressed" from="UI/Control/Endless_button" to="." method="_on_Endless_button_pressed"]
[connection signal="pressed" from="UI/Control/Quit_button" to="." method="_on_Quit_button_pressed"]
[connection signal="pressed" from="UI/Control/Level_button" to="." method="_on_Level_button_pressed"]
[connection signal="pressed" from="UI/Control/Settings_button" to="." method="_on_Settings_button_pressed"]
